# sand-cube

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  params.py  pyproject.toml  result.json
.cad-project/: enclosure-contract.md  models.toml  project.toml
.codex/: config.toml
.ocp-home/: .ocpvscode
archive/: README.md  __init__.py  old_enclosure.py
cad_geometry_checks/: README.md  __init__.py  model.py
cad_runner/: __init__.py  __main__.py  cache.py  cli.py  coordinator.py  entrypoint.py  glb.py  outputs.py  statistics.py  telemetry.py  worker.py
cad_verification/: README.md  __init__.py  evaluation.py  examples.py  model.py  policy.py  protocols.py  serialization.py  validation.py  workflow.py  workflow_serialization.py
docs/: BOM.md  CAD_CACHE.md  CAD_TROUBLESHOOTING.md  COMPACT_6IN_SPEAKER.md  DEVELOPMENT.md  ELECTRONICS_ENCLOSURE.md  LOCAL_CAD_VIEWING.md  NEXT_STEPS.md  RECENT_CAD_CHANGES.md  RESEARCH_VALIDATION.md  custom-fdm-support-learnings.md  horn-print-and-viewer-work-summary.md
objects/: Compression DriverDE250.step  Dayton Audio Binding Posts.stp  E150HE-44.step  E180HE-PR.step  GX16.stp  M4x6mm_threaded_brass_insert.step
scripts/: cad_review.py  cad_verification_io.py  cad_workflow_cli.py  check_cad_entrypoints.py  check_lightweight.py  create_bambu_horn_mouth_down_project.py  create_bambu_horn_support_experiment_project.py  create_bambu_oss_horn_mount_project.py  generate_archive_old_enclosure.py  generate_bracket_assembly.py  generate_compact_6in.py  generate_electronics_3mf.py  generate_electronics_enclosure_layouts.py  (+17 more)
(+385 files in other folders)
