[project]
name = "sand-cube"
version = "0.1.0"
description = "Code-CAD speaker enclosure for a sand-filled FDM cube."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
  "build123d==0.11.1",
  "cadquery-ocp-novtk==7.9.3.1",
  "bd-warehouse",
  "matplotlib",
  "ocp-vscode",
  "psutil",
]

[project.scripts]
cad-run = "cad_runner.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4,<10",
  "ruff>=0.12,<0.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"
